fix(ui): improve spacing in zone edit layout

--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -479,7 +479,7 @@
                 </table>
             </div>
 
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex justify-content-between align-items-center mb-3">
                 <div>
                     {{ pagination | raw }}
                 </div>
