--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -199,6 +199,27 @@
                     </li>
                     {% endif %}
 
+                    {% if perm_is_godlike %}
+                    <!-- Groups Section -->
+                    <li class="nav-item">
+                        <div class="nav-section-header">
+                            <i class="bi bi-people-fill me-2"></i>{% trans %}Groups{% endtrans %}
+                        </div>
+                        <ul class="nav nav-pills flex-column ms-3">
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-sm {{ current_page == 'list_groups' ? 'active' : '' }}" href="{{ base_url_prefix }}/groups">
+                                    <i class="bi bi-collection-fill me-2"></i>{% trans %}List groups{% endtrans %}
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-sm {{ current_page == 'add_group' ? 'active' : '' }}" href="{{ base_url_prefix }}/groups/add">
+                                    <i class="bi bi-plus-circle me-2"></i>{% trans %}Add group{% endtrans %}
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    {% endif %}
+
                     {% if perm_zone_templ_add or perm_zone_templ_edit %}
                     <!-- Templates -->
                     <li class="nav-item">
